# CS412-Lab-02

./: .gitignore  Blob.cpp  BlobDetector.cpp  CMakeLists.txt  DerivedDescriptor.cpp  DerivedDescriptor.hpp  DerivedDetector.cpp  DerivedDetector.hpp  Descriptor.cpp  Descriptor.hpp  Detector.cpp  Detector.hpp  DoG.cpp  DoGDetector.cpp  Harris.cpp  HarrisDetector.cpp  LBPDesExt.cpp  Matcher.cpp  Matcher.hpp  SIFTArgs.hpp  SIFTDesExt.cpp  m.cpp  test_.cpp
